# dar-quickfix

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  struktura repozytorium.txt
benchmark/: Benchmark.md  DAR QuickFix vs Alternatives.md
dar/: __init__.py  branching.py  core.py  memory.py  merge.py  pwm.py  stability.py  utils.py
examples/: grok_stabilized.py  groq_example.py  langchain_agent_stabilized.py  ollama_local.py  openai_example.py
